--- a/apply.html
+++ b/apply.html
@@ -1,51 +1,24 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-
-		<title>Coderise :: Apply Now!</title>
-
+	<head>
+		<title>Coderise :: Apply</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
-		<script src="js/googleAnalytics.js" type="text/javascript"></script>
-
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
-
-
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
 
+		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/googleAnalytics.js" type="text/javascript"></script>
+
+		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
-
-
-
-
 	</head>
-
 	<body>
-
 		<header>
-
-		<div>
-
-
-				<nav>
-
-					<ul>
-
-						<li><a href="aplica.html">Espa&ntilde;ol</a></li>
-
-						<li class="slash">/</li>
-
-						<li><a href="i#" class="current">English</a></li>
-					</ul>
-
-				</nav>
-
-
-
+			<div>
+				<div>
+					<a href="http://coderise.org"><h1>//coderise</h1></a>
+				</div>
 				<div class="social-widgets">
 					<a href="http://coderise.tumblr.com/" class="tb">
 					</a>
@@ -54,152 +27,107 @@
 					</a>
 
 					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>
+					</a>	
 				</div>
-
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-
-				<div class="clearfix"></div>
-
-
+			</div>
+			<div class="clearfix"></div>
 		</header>
 
 		<div id="content">
-
 			<div class="nav">
-			
-			<div class="wrap">
-
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="how.html">How It Works</a></li>
-					<li><a href="mentors.html">Mentors</a></li>
-					<li><a href="about.html">About</a></li>
-					<li class="active"><a href="apply.html">Apply</a></li>
-					<li><a href="contribute.html">Contribute</a></li>
-					<li><a href="team.html">Our Team</a></li>
-					<li><a href="press.html">Press</a></li>
-				</ul>
-
+				<div class="wrap">
+					<div class="btn-group" style="float: left;padding: 9px 0px;">
+  						<button class="btn btn-mini disabled">English</button>
+  						<button class="btn btn-mini"><a href="aplica.html">Español</a></button>
+					</div>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a>
+							<ul>
+								<li><a href="how.html">How It Works</a></li>
+								<li><a href="mentors.html">Mentors</a></li>
+								<li><a href="team.html">Our Team</a></li>
+								<li><a href="students.html">Our Students</a></li>
+							</ul>
+						</li>
+						<li><a href="http://support.coderise.org">Support</a></li>
+						<li class="active"><a href="apply.html">Apply</a></li>
+						<li><a href="press.html">Press</a>
+							<ul>
+								<li><a href="press.html">Coverage</a></li>
+								<li><a href="press.html">Press Releases</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
-		
-		</div>
 
 			<div id="head">
-
 				<section>
-
-					<div></div>
-
-					<article>
-
-						<h2>Code.Inspire.Create.</h2>
-
-						<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-
-
-					</article>
-
+					<div class="wrap">
+						<article>
+							<h2>Programa.Inspira.Crea.</h2>
+							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Apoya ya!</a>
+						</article>
+					</div>
 				</section>
-
-
 			</div>
 
-
 			<div id="wrapper">
-
-
 				<article class="full-width">
+					<h5>Proceso de Aplicación</h5>
+					<p class="colorGreen">¿Quién puede aplicar a Coderise 2013?</p>
 
-				<h5>Proceso de Aplicación</h5>
+					<p>Jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín. Inscripciones comienzan el 20 de Abril.</p>
+					<!--
+					<p class="colorGreen">¡Inscríbase ya!</p>
 
-							<p class="colorGreen">¿Quién puede aplicar a Coderise 2012?</p>
-
-							<p>Jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín.</p>
-
-							<p class="colorGreen">¡Inscríbase ya!</p>
-
-							<p>Coderise está desde ya aceptando inscripciones para el primer programa piloto en Medellín. La convocatoria finalizará el 21 de Septiembre, las clases empezarán el 9 de octubre y serán dictadas en las instalaciones de Intergrupo. Para inscribirte solo debes diligenciar el formulario que se encuentra al final de esta página. La información que nos proveas será analizada por nuestro equipo humano de Coderise y en caso de ser elegido, serás llamado para una entrevista.</p>
+					<p>Coderise está desde ya aceptando inscripciones para el primer programa piloto en Medellín. La convocatoria finalizará el 21 de Septiembre, las clases empezarán el 9 de octubre y serán dictadas en las instalaciones de Intergrupo. Para inscribirte solo debes diligenciar el formulario que se encuentra al final de esta página. La información que nos proveas será analizada por nuestro equipo humano de Coderise y en caso de ser elegido, serás llamado para una entrevista.</p>
 
 
-							<p>Aquí te dejamos algunas pautas que te ayudarán a completar tu formulario de la mejor manera posible:</p>
+					<p>Aquí te dejamos algunas pautas que te ayudarán a completar tu formulario de la mejor manera posible:</p>
 
-							<ul>
+					<ul>
 
-								<li>Tómate el tiempo necesario para pensar bien tus respuestas</li>
-								<li>Sé sincero</li>
-								<li>Anota las respuestas primero en un documento separado. Una vez las hayas completado todas, cópialas y pégalas en el formulario de nuestro sitio web. Esto es para prevenir que por algún motivo técnico se pierdan las respuestas antes de enviar la aplicación.</li>
+						<li>Tómate el tiempo necesario para pensar bien tus respuestas</li>
+						<li>Sé sincero</li>
+						<li>Anota las respuestas primero en un documento separado. Una vez las hayas completado todas, cópialas y pégalas en el formulario de nuestro sitio web. Esto es para prevenir que por algún motivo técnico se pierdan las respuestas antes de enviar la aplicación.</li>
 
-							</ul>
-
-							</article>
-
-							<section class="contact">
-
+					</ul>
+				</article>
+				<section class="contact">
 					<p><b>Si tienes alguna pregunta, escríbenos a <a href="mailto:equipo@coderise.org">equipo@coderise.org.</a></b></p>
-
 				</section>
+				<article class="full-width">
+					<p class="colorGreen">Programación</p>
 
+					<ul>
+						<li> <span class="colorGreen">27 de agosto: </span> Lanzamiento de convocatoria a jóvenes (ya pueden inscribirse)</li>
+						<li> <span class="colorGreen">21 de septiembre: </span> Conclusión de convocatoria</li>
+						<li> <span class="colorGreen">21 de septiembre: </span> Ultimo dia para determinar quien va a la segunda ronda de entrevistas</li>
+						<li> <span class="colorGreen">21-28 de septiembre: </span> Entrevistas a los finalistas</li>
+						<li> <span class="colorGreen">1 de octubre: </span> Resultados de los 20 aceptados</li>
+						<li> <span class="colorGreen">9 de octubre: </span> Primer dia de clases</li>
+						<li> <span class="colorGreen">1 de diciembre: </span> Último dia de clases. Sujeto a re-ajustes.</li>
+					</ul>
 
-
-							<article class="full-width">
-
-							<p class="colorGreen">Programación</p>
-
-							<ul>
-
-								<li> <span class="colorGreen">27 de agosto: </span> Lanzamiento de convocatoria a jóvenes (ya pueden inscribirse)</li>
-
-								<li> <span class="colorGreen">21 de septiembre: </span> Conclusión de convocatoria</li>
-
-								<li> <span class="colorGreen">21 de septiembre: </span> Ultimo dia para determinar quien va a la segunda ronda de entrevistas</li>
-
-								<li> <span class="colorGreen">21-28 de septiembre: </span> Entrevistas a los finalistas</li>
-
-								<li> <span class="colorGreen">1 de octubre: </span> Resultados de los 20 aceptados</li>
-
-								<li> <span class="colorGreen">9 de octubre: </span> Primer dia de clases</li>
-
-								<li> <span class="colorGreen">1 de diciembre: </span> Último dia de clases. Sujeto a re-ajustes.</li>
-
-							</ul>
-
-							<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
-
-
-						</article>
-
-
-				
+					<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
+				</article>				
 				<div class="clearfix"></div>
-
+				
 				<section class="apply-forms">
-
 					<article>
-
 						<a href="http://coderise.wufoo.com.mx/forms/z7x3p9/">Formulario de Aplicación</a>
-
 					</article>
-
 					<br/>
-
 					<iframe height="3115" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="http://coderise.wufoo.com.mx/embed/z7x3p9/"><a href="http://coderise.wufoo.com.mx/forms/z7x3p9/">Fill out my Wufoo form!</a></iframe>
-
-
-
 					<div class="clearfix"></div>
 
 				</section>
-
+				-->
 				<div class="clearfix"></div>
-
-
-				<div class="clearfix"></div>
-
-
 			</div>
-
 		</div>
-
-</body>
+	</body>
 </html>
