--- a/index-es.html
+++ b/index-es.html
@@ -1,53 +1,22 @@
 <!DOCTYPE html>
-
 <html>
-
 	<head>
-
 		<title>:: Coderise ::</title>
-
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
-
-
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
-
 		<link rel="icon" type="image/png" href="favicon.png"/>
-
-
-
-
 	</head>
-
 	<body>
-
 		<header>
-
-		<div>
-
-
-				<nav>
-
-					<ul>
-
-						<li><a href="#" class="current">Español</a></li>
-
-						<li class="slash">/</li>
-
-						<li><a href="index.html">English</a></li>
-
-
-					</ul>
-
-				</nav>
-
-
+			<div>
+				<a href="http://coderise.org"><h1>//coderise</h1></a>
 				<div class="social-widgets">
 					<a href="http://coderise.tumblr.com/" class="tb">
 					</a>
@@ -58,230 +27,112 @@
 					<a href="http://www.facebook.com/Coderise" class="fb">
 					</a>
 				</div>
-
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-
 				<div class="clearfix"></div>
-
-
 		</header>
-
 		<div id="content">
-
 			<div class="nav">
-
-			<div class="wrap">
-
-				<ul>
-					<li class="active"><a href="index-es.html">Inicio</a></li>
-					<li><a href="como.html">Como Funciona</a></li>
-					<li><a href="mentores.html">Mentores</a></li>
-					<li><a href="acerca.html">Sobre Coderise</a></li>
-					<li><a href="aplica.html">Aplica</a></li>
-					<li><a href="contribute.html">Apoya</a></li>
-					<li><a href="team.html">Equipo</a></li>
-					<li><a href="press.html">Prensa</a></li>
-				</ul>
-
+				<div class="wrap">
+					<div class="btn-group" style="float: left;padding: 9px 0px;">
+  						<button class="btn btn-mini"><a href="index.html">English</a></button>
+  						<button class="btn btn-mini disabled">Español</button>
+					</div>
+					<ul>
+						<li class="active"><a href="index.html">Inicio</a></li>
+						<li><a href="acerca.html">Sobre Coderise</a>
+							<ul>
+								<li><a href="como.html">Como funciona</a></li>
+								<li><a href="mentores.html">Mentores</a></li>
+								<li><a href="team.html">Equipo</a></li>
+								<li><a href="estudiantes.html">Estudiantes</a></li>
+							</ul>
+						</li>
+						<li><a href="http://support.coderise.org/">Apoya</a></li>
+						<li><a href="aplica.html">Aplica</a></li>
+						<li><a href="press.html">Prensa</a>
+							<ul>
+								<li><a href="press.html">Cubrimiento</a></li>
+								<li><a href="press.html">Comunicados</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>		
 			</div>
-
-		</div>
-
 			<div id="head">
-
 				<section>
-
-					<div></div>
-
-					<article>
-
-						<h2>Programa.Inspira.Crea.</h2>
-
-						<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web. </h3>
-
-
-					</article>
-
-				</section>
-
-
-			</div>
-
-			<div id="wrapper">
-
-				<section>
-
-			<div class="well ">
-            <p>Support our crowdfunding campaign to empower kids in developing nations through code &nbsp;</p>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-				<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Contribute Now!"/>
-			</form>
-
-			<div class="fix"></div>
-
-
-            </div>
-
-        	</section>
-
-				<div id="slider">
-
-					<div>
-
+					<div class="wrap">
 						<article>
-
+							<h2>Programa.Inspira.Crea.</h2>
+							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Apoya ya!</a>
+						</article>
+					</div>
+				</section>
+			</div>
+			<div id="wrapper">
+				<div id="slider">
+					<div>
+						<section id="intro">
+							<article>
 							<p>En los pa&iacute;ses en desarrollo muy a menudo las oportunidades existentes para avanzar en la escala econ&oacute;mica y social son limitadas. Hoy el internet y la tecnolog&iacute;a han democratizado esta oportunidad. Coderise no solamente genera acceso a la tecnolog&iacute;a sino que tambi&eacute;n les ense&ntilde;a a los chicos c&oacute;mo crear con ella.</p>
 
 							<p>Ya sea para conseguir trabajo independiente con clientes globales, puestos internos con firmas locales desarrolladoras de software o incluso empezar sus propios startups tecnol&oacute;gicos, Coderise ofrece todas las habilidades, herramientas y conexiones necesarias para desarrollar todo su potencial.</p>
 
 							<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
-
-
-							<br/>
-
-
-						</article>
-
-						<section>
-
-							<iframe width="100%" height="100%" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="http://player.vimeo.com/video/47140918"></iframe>
-
+							</article>
 
 						</section>
-
-
+						<section id="video">
+							<iframe width="100%" height="100%" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="http://player.vimeo.com/video/47140918?title=0&byline=0&portrait=0"></iframe>
+							<h6 style="margin-top: 20px;">Mantente informado sobre la Comunidad Coderise!</h6>
+							<div class="input" style="background: rgba(45,169,171,0.2);margin-top: 20px;">
+								<form id="signup_form">
+									<input id="email" class="email-input" type="text" placeholder="Enter Your Email" name="email" size="64" style="margin-right: 30px;">
+									<input id="submit_email" class="submit-button btn btn-pink" type="submit" value="Suscribir">
+								</form>
+							</div>
+						</section>
 					</div>
-
 				</div>
+				<div class="clearfix"></div>	
+				<section>
+					<h4>Coderise busca:</h4>
+					<div>
+						<article>
+							<h5>Ense&ntilde;ar para crear</h5>
 
+							<p>Coderise se enfoca en las habilidades de programaci&oacute;n que tienen una alta demanda y que proporcionar&aacute;n a los estudiantes las herramientas para salir y empezar a crear.</p>
+						</article>
+
+						<article>
+							<h5>Inspirar con el ejemplo</h5>
+
+							<p>Coderise trae a los m&aacute;s reconocidos emprendedores tecnol&oacute;gicos y programadores para compartir inspiraci&oacute;n y conocimientos t&eacute;cnicos de su trabajo.</p>
+						</article>
+
+						<article>
+							<h5>Aprendizaje del mundo real</h5>
+
+							<p>Coderise brinda un programa de 8 semanas de entrenamiento intensivo que impulsa el aprendizaje de creaci&oacute;n de productos a trav&eacute;s de proyectos y el trabajo en equipo.</p>
+						</article>
+
+						<article>
+							<h5>Conectar a las oportunidades</h5>
+
+							<p>Coderise conecta a los estudiantes con  oportunidades de pr&aacute;cticas para continuar aprendiendo, creando y colaborando.</p>
+						</article>
+					</div>
+				</section>
 				<div class="clearfix"></div>
-
-				<section class="support">
-
-					<h6>Our Supporters</h6>
+				<section>
+					<h4>Nuestros patrocinadores</h4>
 
 					<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30" class="slogo"/></a>
 
 					<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55" class="slogo"/></a>
-
 				</section>
-
 				<div class="clearfix"></div>
-
-				<section>
-
-					<div class="input">
-
-						<form id="signup_form">
-
-							<label for="email">Email</label>
-
-								<input id="email" class="email-input" type="text" placeholder="Enter Your Email" name="email" size="64">
-
-								<input id="submit_email" class="submit-button" type="submit" value="JOIN" />
-
-							</form>
-
-
-						</div>
-
-					<div class="clearfix"></div>
-
-				</section>
-
-				<section>
-
-					<h4>Coderise busca:</h4>
-
-					<div>
-
-						<article>
-
-							<h5>Ense&ntilde;ar para crear</h5>
-
-							<p>Coderise se enfoca en las habilidades de programaci&oacute;n que tienen una alta demanda y que proporcionar&aacute;n a los estudiantes las herramientas para salir y empezar a crear.</p>
-
-						</article>
-
-						<article>
-
-							<h5>Inspirar con el ejemplo</h5>
-
-							<p>Coderise trae a los m&aacute;s reconocidos emprendedores tecnol&oacute;gicos y programadores para compartir inspiraci&oacute;n y conocimientos t&eacute;cnicos de su trabajo. </p>
-
-						</article>
-
-						<article>
-
-							<h5>Aprendizaje del mundo real</h5>
-
-							<p>Coderise brinda un programa de 8 semanas de entrenamiento intensivo que impulsa el aprendizaje de creaci&oacute;n de productos a trav&eacute;s de proyectos y el trabajo en equipo.</p>
-
-						</article>
-
-						<article>
-
-							<h5>Conectar a las oportunidades</h5>
-
-							<p>Coderise conecta a los estudiantes con  oportunidades de pr&aacute;cticas para continuar aprendiendo, creando y colaborando.</p>
-
-						</article>
-
-					</div>
-
-				</section>
-
-
-				<aside>
-
-					<article>
-
-						<h6>Nuestro Equipo</h6>
-
-						<p><a href="http://www.linkedin.com/in/andreamcornejo">Andrea Cornejo</a></p>
-						<p><a href="http://www.linkedin.com/pub/alejandra-garc%C3%ADa-correa/39/363/2b2">Alejandra Garcia</a></p>
-						<p>Sergio Valencia</p>
-						<p>Ana Carolina Lopez</p>
-						<p>Carolina Crispin</p>
-
-
-					</article>
-
-
-					<article>
-
-						<h6>Comit&eacute; Asesor</h6>
-						<p><a href="http://www.linkedin.com/in/andreshb">Andres Barreto</a></p>
-						<p><a href="http://www.linkedin.com/in/buritica">Juan Pablo Buritic&aacute;</a></p>
-						<p><a href="http://www.linkedin.com/in/c4milo">Camilo Aguilar</a></p>
-						<p><a href="http://www.linkedin.com/in/josebetancur">Jos&eacute; Betancur</a></p>
-						<p><a href="mailto:elizabeth.ramirez@rutanmedellin.org">Elizabeth Ramirez</a></p>
-
-					</article>
-
-
-
-				</aside>
-
-				<div class="clearfix"></div>
-
-	<!-- 			<img src="images/coderiseconvocatoria2.png"  width="80%" class="center-image"/>
-
-				<a href="docs/coderise-convocatoria.pdf" class="outside"> Descarga el PDF </a> -->
-
-
 			</div>
-
 		</div>
-
 		<script type="text/javascript" src="js/kickofflabs.js"> </script>
-
-
-
-
-
-</body></html>
+	</body>
+</html>
