--- a/index.html
+++ b/index.html
@@ -1,57 +1,22 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-
+	<head>
 		<title>:: Coderise ::</title>
-
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
-
-
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
-
 		<link rel="icon" type="image/png" href="favicon.png"/>
-
-
-
-
 	</head>
-
 	<body>
-
 		<header>
-
-		<div>
-
-				
-
-				<nav>
-
-					<ul>
-
-						<li><a href="index-es.html" >Espa&ntilde;ol</a></li>
-
-						<li class="slash">/</li>
-
-						<li><a href="/" class="current">English</a></li>
-
-						<!-- <li class="slash">/</li>
-
-						<li><a href="about.html">About</a></li> -->
-
-					</ul>
-
-				</nav>
-
+			<div>
 				<a href="http://coderise.org"><h1>//coderise</h1></a>
-
 				<div class="social-widgets">
 					<a href="http://coderise.tumblr.com/" class="tb">
 					</a>
@@ -61,257 +26,113 @@
 
 					<a href="http://www.facebook.com/Coderise" class="fb">
 					</a>
-				
 				</div>
-
-
 				<div class="clearfix"></div>
-
-
 		</header>
-
 		<div id="content">
-
-		<div class="nav">
-			
-			<div class="wrap">
-
-				<ul>
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="how.html">How It Works</a></li>
-					<li><a href="mentors.html">Mentors</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="apply.html">Apply</a></li>
-					<li><a href="contribute.html">Contribute</a></li>
-					<li><a href="team.html">Our Team</a></li>
-					<li><a href="press.html">Press</a></li>
-				</ul>
-
+			<div class="nav">
+				<div class="wrap">
+					<div class="btn-group" style="float: left;padding: 9px 0px;">
+  						<button class="btn btn-mini disabled">English</button>
+  						<button class="btn btn-mini"><a href="index-es.html">Español</a></button>
+					</div>
+					<ul>
+						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a>
+							<ul>
+								<li><a href="how.html">How It Works</a></li>
+								<li><a href="mentors.html">Mentors</a></li>
+								<li><a href="team.html">Our Team</a></li>
+								<li><a href="students.html">Our Students</a></li>
+							</ul>
+						</li>
+						<li><a href="http://support.coderise.org/">Support</a></li>
+						<li><a href="apply.html">Apply</a></li>
+						<li><a href="press.html">Press</a>
+							<ul>
+								<li><a href="press.html">Coverage</a></li>
+								<li><a href="press.html">Press Releases</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>		
 			</div>
-		
-		</div>
-
 			<div id="head">
-
 				<section>
-
-					<div></div>
-
-					<article>
-
-						<h2>Code.Inspire.Create.</h2>
-
-						<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-
-
-					</article>
-
-				</section>
-
-			</div>
-
-			<div id="wrapper">
-
-				<section>
-
-			<div class="well ">
-            <p>Support our crowdfunding campaign to empower kids in developing nations through code &nbsp;</p>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-				<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Contribute Now!"/>
-			</form>
-
-			<div class="fix"></div>
-
-
-            </div>
-
-        	</section>
-
-				<div id="slider">
-
-					<div>
-
+					<div class="wrap">
 						<article>
-
+							<h2>Code.Inspire.Create.</h2>
+							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Support now!</a>
+						</article>
+					</div>
+				</section>
+			</div>
+			<div id="wrapper">
+				<div id="slider">
+					<div>
+						<section id="intro">
+							<article>
 							<p>In developing nations, very often opportunities for going up the economic and social ladder are limited. Today, the internet and technology have democratized this opportunity. Coderise not only creates access to technology but also teaches kids how to create with it.</p>
 
 							<p>Whether it's getting freelance jobs with global clients, internships with local software development firms or even starting their own tech startups, Coderise will offer all the skills, tools and connections necessary to realize their full potential.</p>
 
 							<p>Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
-
-							<br/>
-
-
-
-
-						</article>
-
-
-						<section class="apply-form">
-
-							<iframe width="100%" height="100%" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="http://player.vimeo.com/video/47140918"></iframe>
+							</article>
 
 						</section>
-
+						<section id="video">
+							<iframe width="100%" height="100%" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="http://player.vimeo.com/video/47140918?title=0&byline=0&portrait=0"></iframe>
+							<h6 style="margin-top: 20px;">Keep up with the Coderise Community!</h6>
+							<div class="input" style="background: rgba(45,169,171,0.2);margin-top: 20px;">
+								<form id="signup_form">
+									<input id="email" class="email-input" type="text" placeholder="Enter Your Email" name="email" size="64" style="margin-right: 30px;">
+									<input id="submit_email" class="submit-button btn btn-pink" type="submit" value="Join">
+								</form>
+							</div>
+						</section>
 					</div>
-
-
 				</div>
+				<div class="clearfix"></div>	
+				<section>
+					<h4>Coderise seeks to:</h4>
+					<div>
+						<article>
+							<h5>Teach to create</h5>
 
+							<p>Coderise focuses on the programming skills that are in high demand and that will provide students with the tools to go out there and start creating.</p>
+						</article>
+
+						<article>
+							<h5>Inspire by Example</h5>
+
+							<p>Coderise brings the most recognized tech entrepreneurs and programmers to share inspiring and technical know-how on their work.</p>
+						</article>
+
+						<article>
+							<h5>Real World Learning</h5>
+
+							<p>Coderise provides an 8-week intensive training program based on team and project-driven learning to build products.</p>
+						</article>
+
+						<article>
+							<h5>Connect to opportunities</h5>
+
+							<p>Coderise will connect students with internship opportunities to continue learning, creating and collaborating.</p>
+						</article>
+					</div>
+				</section>
 				<div class="clearfix"></div>
-
-				<section class="support">
-
-					<h6>Our Supporters</h6>
+				<section>
+					<h4>Our Supporters</h4>
 
 					<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30" class="slogo"/></a>
 
 					<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55" class="slogo"/></a>
-
 				</section>
-
 				<div class="clearfix"></div>
-
-			<section>
-
-					<div class="input">
-
-						<form id="signup_form">
-
-							<label for="email">Email</label>
-
-							<input id="email" class="email-input" type="text" placeholder="Enter Your Email" name="email" size="64">
-
-							<input id="submit_email" class="submit-button" type="submit" value="JOIN" />
-
-						</form>
-
-					</div>
-
-					<div class="clearfix"></div>
-
-				</section>
-
-				<div class="clearfix"></div>
-
-
-				<section>
-
-					<h4>Coderise seeks to:</h4>
-
-					<div>
-
-						<article>
-
-							<h5>Teach to create</h5>
-
-							<p>Coderise focuses on the programming skills that are in high demand and that will provide students with the tools to go out there and start creating.</p>
-
-						</article>
-
-						<article>
-
-							<h5>Inspire by Example</h5>
-
-							<p>Coderise brings the most recognized tech entrepreneurs and programmers to share inspiring and technical know-how on their work.</p>
-
-						</article>
-
-						<article>
-
-							<h5>Real World Learning</h5>
-
-							<p>Coderise provides an 8-week intensive training program based on team and project-driven learning to build products.</p>
-
-						</article>
-
-						<article>
-
-							<h5>Connect to opportunities</h5>
-
-							<p>Coderise will connect students with internship opportunities to continue learning, creating and collaborating.</p>
-
-						</article>
-
-					</div>
-
-				</section>
-
-
-				<aside>
-
-					<article>
-
-						<h6>Our team</h6>
-
-						<p><a href="http://www.linkedin.com/in/andreamcornejo">Andrea Cornejo</a></p>
-						<p><a href="http://www.linkedin.com/pub/alejandra-garc%C3%ADa-correa/39/363/2b2">Alejandra Garcia</a></p>
-						<p>Sergio Valencia</p>
-						<p>Ana Carolina Lopez</p>
-						<p>Carolina Crispin</p>
-						<p><a href="https://twitter.com/LopezCatherine">Catherine Lopez</a></p>
-
-
-					</article>
-
-
-					<article>
-
-						<h6>Advisory Board</h6>
-						<p><a href="http://www.linkedin.com/in/andreshb">Andres Barreto</a></p>
-						<p><a href="http://www.linkedin.com/in/buritica">Juan Pablo Buritica</a></p>
-						<p><a href="http://www.linkedin.com/in/c4milo">Camilo Aguilar</a></p>
-						<p><a href="http://www.linkedin.com/in/josebetancur">Jose Betancur</a></p>
-						<p><a href="mailto:elizabeth.ramirez@rutanmedellin.org">Elizabeth Ramirez</a></p>
-
-					</article>
-
-					<!-- <article>
-
-						<h6>Our Supporters</h6>
-
-
-						<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30" class="slogo"/></a>
-
-
-						<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55" class="slogo"/></a>
-
-					</article> -->
-
-					<!-- <article>
-
-						<h6>Contact us</h6>
-
-						<a href="mailto:andrea@coderise.org">andrea@coderise.org</a>
-						<p>Skype: andreamcornejo</p>
-						<p>Twitter: <a href="http://twitter.com/code_rise">@code_rise</a></p>
-
-					</article> -->
-
-
-				</aside>
-
-				<div class="clearfix"></div>
-
-			<!-- 	<img src="images/coderiseconvocatoria2.png"  width="80%" class="center-image"/>
-
-				<a href="docs/coderise-convocatoria.pdf" class="outside"> Download the PDF </a> -->
-
-
 			</div>
-
 		</div>
-
 		<script type="text/javascript" src="js/kickofflabs.js"> </script>
-
-
-
-
-
-
-
-</body></html>
+	</body>
+</html>
