--- a/mentors.html
+++ b/mentors.html
@@ -1,51 +1,24 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-
-		<title>CodeRise :: Mentors</title>
-
+	<head>
+		<title>Coderise :: Mentors</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
 
 		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
-
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
+		
 		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
-
-
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
-
 		<link rel="icon" type="image/png" href="favicon.png"/>
-
-
 	</head>
-
 	<body>
-
 		<header>
-
-		<div>
-
-
-				<nav>
-
-					<ul>
-
-						<li><a href="mentores.html" >Espa&ntilde;ol</a></li>
-
-						<li class="slash">/</li>
-
-						<li><a href="#" class="current">English</a></li>
-
-
-					</ul>
-
-				</nav>
-
-
-
+			<div>
+				<div>
+					<a href="http://coderise.org"><h1>//coderise</h1></a>
+				</div>
 				<div class="social-widgets">
 					<a href="http://coderise.tumblr.com/" class="tb">
 					</a>
@@ -54,122 +27,107 @@
 					</a>
 
 					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>
+					</a>	
 				</div>
-
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-
-				<div class="clearfix"></div>
-
-
-		</header>
-
-		<div id="content">
-
-			<div class="nav">
-			
-			<div class="wrap">
-
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="how.html">How It Works</a></li>
-					<li class="active"><a href="mentors.html">Mentors</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="apply.html">Apply</a></li>
-					<li><a href="contribute.html">Contribute</a></li>
-					<li><a href="team.html">Our Team</a></li>
-					<li><a href="press.html">Press</a></li>
-				</ul>
-
 			</div>
-		
-		</div>
+			<div class="clearfix"></div>
+		</header>
+		<div id="content">
+			<div class="nav">
+				<div class="wrap">
+					<div class="btn-group" style="float: left;padding: 9px 0px;">
+  						<button class="btn btn-mini disabled">English</button>
+  						<button class="btn btn-mini"><a href="mentores.html">Español</a></button>
+					</div>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li class="active"><a href="about.html">About</a>
+							<ul>
+								<li><a href="how.html">How It Works</a></li>
+								<li><a href="mentors.html">Mentors</a></li>
+								<li><a href="team.html">Our Team</a></li>
+								<li><a href="students.html">Our Students</a></li>
+							</ul>
+						</li>
+						<li><a href="contribute.html">Support</a></li>
+						<li><a href="apply.html">Apply</a></li>
+						<li><a href="press.html">Press</a>
+							<ul>
+								<li><a href="press.html">Coverage</a></li>
+								<li><a href="press.html">Press Releases</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
 
 			<div id="head">
-
 				<section>
-
-					<div></div>
-
-					<article>
-
-						<h2>Code.Inspire.Create.</h2>
-
-						<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-
-
-					</article>
-
+					<div class="wrap">
+						<article>
+							<h2>Code.Inspire.Create.</h2>
+							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Support now!</a>
+						</article>
+					</div>
 				</section>
-
-
 			</div>
 
 			<div id="wrapper">
-			<section>
-
-			<div class="well ">
-            <p>Support our crowdfunding campaign to empower kids in developing nations through code &nbsp;</p>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-				<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Contribute Now!"/>
-			</form>
-
-			<div class="fix"></div>
-
-
-            </div>
-
-        	</section>
-
 				<article class="full-width">
+					<h5>Coderise Mentors</h5>
+					<p>Each Saturday, after regular class from 8:00 AM to 11:00 AM, there will be informal talks with various Coderise mentors, successful professionals from the tech world.</p>
 
-							<h5>Coderise Mentors</h5>
+					<article class="team">
+						<img src="images/Andres2.png" class="thumbs"/>
+						<div>
+							<h6 class="colorGreen">Andrés Barreto</h6>
+							<p class="email"><a href="http://twitter.com/andresbarreto">@andresbarreto</a></p>
+						</div>
+						<p>Colombian entrepreneur,  co-founder of <a href="http://onswipe.com">Onswipe</a>, a platform for tablet publishing and advertising. He previously cofounded <a href="http://grooveshark.com">Grooveshark</a>, a leading music streaming app,  <a href="http://socialatomgroup.com">Socialatom Group</a>, a Tech and PR agency that also promotes entrepreneurship in the region with startup and tech blog <a href="http://pulsosocial.com">PulsoSocial</a>.</p>
+					</article>
 
-							<p>Each Saturday, after regular class from 8:00 AM to 11:00 AM, there will be informal talks with various Coderise mentors, successful professionals from the tech world.</p>
+					<article class="team">
+						<img src="images/Alex.png" class="thumbs" />
+						<div>
+							<h6 class="colorGreen">Alex Torrenegra</h6>
+							<p class="email"><a href="http://twitter.com/torrenegra">@torrenegra</a></p>
+						</div>
+						<p>Founder of <a href="http://torrenegralabs.com">Torrenegra Labs</a>, tech startup incubator in Bogotá, Colombia, and founder of <a href="http://voicebunny.com">VoiceBunny</a>, <a href="http://bookingmarkets.com">BookingMarkets</a>, <a href="http://wehostels.com/">WeHostels</a>, <a href="http://hubbog.com/es">HubBOG</a>, and others.<br/>
+						</p>
+					</article>
 
+					<article class="team">
+						<img src="images/Daniel.png" class="thumbs"/>
+						<div>
+							<h6 class="colorGreen">Daniel Loreto</h6>
+							<p class="email"><a href="http://twitter.com/DanielLoreto">@DanielLoreto</a></p>
+						</div>
+						 Tech entrepreneur and software programmer.  After working for Google, founded social data analytic startup Julpan, and currently  is on the engineering team for <a href="http://twitter.com">Twitter</a>.<br/>
+						</p>
+					</article>
 
-								<img src="images/Andres2.png" class="thumbs"/><p> <span class="colorGreen">- Andrés Barreto</span> (<a href="http://twitter.com/andresbarreto">@andresbarreto</a>)</p>
-								<p>Colombian entrepreneur,  co-founder of <a href="http://onswipe.com">Onswipe</a>, a platform for tablet publishing and advertising. He previously cofounded <a href="http://grooveshark.com">Grooveshark</a>, a leading music streaming app,  <a href="http://socialatomgroup.com">Socialatom Group</a>, a Tech and PR agency that also promotes entrepreneurship in the region with startup and tech blog <a href="http://pulsosocial.com">PulsoSocial</a>.</p>
-								<br/>
+					<article class="team">
+						<img src="images/Gisella.png" class="thumbs"/>
+						<div>
+							<h6 class="colorGreen">Gisella Borja</h6>
+							<p class="email"><a href="http://twitter.com/gigiborja">@gigiborja</a></p>
+						</div>
+						<p>CTO of <a href="http://bookingmarkets.com/">Booking Markets</a>, online platform focused on travel and stay.</p>
+					</article>
 
-
-								<img src="images/Alex.png" class="thumbs" /><p> <span class="colorGreen">- Alex Torrenegra</span> (<a href="http://twitter.com/torrenegra">@torrenegra</a>)</p>
-								<p>Founder of <a href="http://torrenegralabs.com">Torrenegra Labs</a>, tech startup incubator in Bogotá, Colombia, and founder of <a href="http://voicebunny.com">VoiceBunny</a>, <a href="http://bookingmarkets.com">BookingMarkets</a>, <a href="http://wehostels.com/">WeHostels</a>, <a href="http://hubbog.com/es">HubBOG</a>, and others.<br/>
-								</p>
-								<br/>
-
-
-								<img src="images/Daniel.png" class="thumbs"/><p> <span class="colorGreen">- Daniel Loreto</span> (<a href="http://twitter.com/DanielLoreto">@DanielLoreto</a>)</p>
-								 Tech entrepreneur and software programmer.  After working for Google, founded social data analytic startup Julpan, and currently  is on the engineering team for <a href="http://twitter.com">Twitter</a>.<br/>
-								</p>
-								<br/>
-
-								<img src="images/Gisella.png" class="thumbs"/><p><span class="colorGreen">- Gisella Borja</span> (<a href="http://twitter.com/gigiborja">@gigiborja</a>)</p>
-								<p>CTO of <a href="http://bookingmarkets.com/">Booking Markets</a>, online platform focused on travel and stay.</p>
-								<br/>
-
-								<img src="images/juanpablo.jpg" class="thumbs"/><p> <span class="colorGreen">- Juan Pablo Buritica</span> (<a href="http://twitter.com/buritica">@buritica</a>)</p>
-								 Colombian entrepreneur and software engineer, he is currently the VP of Engineering at Onswipe. He is also founder and director of Bogotaconf, a conference dedicated to the highest quality software engineering topics. Formerly, he cofounded and was the Lead Engineer at Panelfly, a mobile comics distribution app.
-								</p>
-								<br/>
-						</article>
-
-
-
+					<article class="team">
+						<img src="images/juanpablo.jpg" class="thumbs"/>
+						<div> 
+							<h6 class="colorGreen">Juan Pablo Buritica</h6>
+							<p class="email"><a href="http://twitter.com/buritica">@buritica</a></p>
+						</div>
+						 Colombian entrepreneur and software engineer, he is currently the VP of Engineering at Onswipe. He is also founder and director of Bogotaconf, a conference dedicated to the highest quality software engineering topics. Formerly, he cofounded and was the Lead Engineer at Panelfly, a mobile comics distribution app.
+						</p>
+					</article>
+				</article>
 				<div class="clearfix"></div>
-
-
 			</div>
-
 		</div>
-
-
-
-
-
-</body>
+	</body>
 </html>
