--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
-	<!DOCTYPE html>
-
+<!DOCTYPE html>
 <html>
-<head>
-
+	<head>
 		<title>Coderise :: About</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
 
 		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
@@ -13,41 +12,12 @@
 		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
-
-
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
-
 		<link rel="icon" type="image/png" href="favicon.png"/>
-
-
-
-
 	</head>
-
 	<body>
-
 		<header>
-
-		<div>
-
-
-				<nav>
-
-					<ul>
-
-						<li><a href="acerca.html" >Espa&ntilde;ol</a></li>
-
-						<li class="slash">/</li>
-
-						<li><a href="#" class="current">English</a></li>
-
-
-					</ul>
-
-				</nav>
-
-
-
+			<div>
+				<a href="http://coderise.org"><h1>//coderise</h1></a>
 				<div class="social-widgets">
 					<a href="http://coderise.tumblr.com/" class="tb">
 					</a>
@@ -58,135 +28,89 @@
 					<a href="http://www.facebook.com/Coderise" class="fb">
 					</a>
 				</div>
-
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-
 				<div class="clearfix"></div>
-
-
 		</header>
-
 		<div id="content">
-
 			<div class="nav">
-			
-			<div class="wrap">
-
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="how.html">How It Works</a></li>
-					<li><a href="mentors.html">Mentors</a></li>
-					<li class="active"><a href="about.html">About</a></li>
-					<li><a href="apply.html">Apply</a></li>
-					<li><a href="contribute.html">Contribute</a></li>
-					<li><a href="team.html">Our Team</a></li>
-					<li><a href="press.html">Press</a></li>
-				</ul>
-
+				<div class="wrap">
+					<div class="btn-group" style="float: left;padding: 9px 0px;">
+							<button class="btn btn-mini disabled">English</button>
+							<button class="btn btn-mini"><a href="acerca.html">Español</a></button>
+					</div>
+					<ul>
+						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a>
+							<ul>
+								<li><a href="how.html">How It Works</a></li>
+								<li><a href="mentors.html">Mentors</a></li>
+								<li><a href="team.html">Our Team</a></li>
+								<li><a href="students.html">Our Students</a></li>
+							</ul>
+						</li>
+						<li><a href="http://support.coderise.org/">Support</a></li>
+						<li><a href="apply.html">Apply</a></li>
+						<li><a href="press.html">Press</a>
+							<ul>
+								<li><a href="press.html">Coverage</a></li>
+								<li><a href="press.html">Press Releases</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
-		
-		</div>
-
 			<div id="head">
-
 				<section>
-
-					<div></div>
-
-					<article>
-
-						<h2>Code.Inspire.Create.</h2>
-
-						<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-
-
-					</article>
-
+					<div class="wrap">
+						<article>
+							<h2>Code.Inspire.Create.</h2>
+							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Support now!</a>
+						</article>
+					</div>
 				</section>
-
-
 			</div>
-
-
-
 			<div id="wrapper">
-
-			<section>
-
-			<div class="well ">
-            <p>Support our crowdfunding campaign to empower kids in developing nations through code &nbsp;</p>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-				<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Contribute Now!"/>
-			</form>
-
-			<div class="fix"></div>
-
-
-            </div>
-
-        	</section>
-
 				<article class="full-width">
-
-							<img src="images/kids and instructor.png" class="mini-thumb"/><h5>About</h5>
-							<br/>
+					<h5>About</h5>
+					<div>
+						<img src="images/kids_and_instructor.png" class="mini-thumb left" style="margin-top:45px"/>
+						<div class="right">
 							<p class="colorGreen">Mission</p>
-
 							<p>Our mission is to empower high-school students with demonstrated potential by giving them the tools and inspiration to dive into tech innovation and tap into their entrepreneurial spirit.</p>
-							<br/>
-							<br/>
 							<p class="colorGreen">Objectives</p>
 							<ul>
-
 								<li>Graduate 15 students from the Coderise pilot program</li>
 								<li>Launch the first Coderise Hackathon at the end of the program</li>
 								<li>Achieve a basic level of Javascript for 70 percent of students</li>
-
 							</ul>
-
-							<p class="colorGreen">Impact</p>
-
+						</div>
+					</div>
+					<div class="clearfix"></div>
+					<div>
+						<p class="colorGreen">Impact</p>
+						<div class="left">
 							<p>Coderise provides foundations for the students to participate in:</p>
-
 							<ul>
-
 								<li>Local accelerators</li>
 								<li>Local technology firms</li>
 								<li>International tech companies</li>
 								<li>Building their own products and bringing their ideas to life</li>
-
 							</ul>
-
+						</div>
+						<div class="right">
 							<p>As a result, students will be able to:</p>
-
 							<ul>
 								<li>Stay in school</li>
 								<li>Contribute to their families</li>
 								<li>Land scholarships and create income to pay for school</li>
 							</ul>
-
-							<p>Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
-
-
-					</article>
-
-				<div class="clearfix"></div>
-
-				<div class="clearfix"></div>
-
-
-
+						</div>
+					</div>
+					<div class="clearfix"></div>
+					<p class="infobox">Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
+				</article>
+			<div class="clearfix"></div>
 			</div>
-
 		</div>
-
-
-
-
-
-</body>
+	</body>
 </html>
