--- a/acerca.html
+++ b/acerca.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-
-		<title>Coderise :: Acerca</title>
+	<head>
+		<title>Coderise :: Sobre Coderise</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
 
 		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
@@ -13,41 +12,12 @@
 		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
-
-
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
-
 		<link rel="icon" type="image/png" href="favicon.png"/>
-
-
-
-
 	</head>
-
 	<body>
-
 		<header>
-
-		<div>
-
-
-				<nav>
-
-					<ul>
-
-						<li><a href="#.html" class="current">Espa&ntilde;ol</a></li>
-
-						<li class="slash">/</li>
-
-						<li><a href="about.html" >English</a></li>
-
-
-					</ul>
-
-				</nav>
-
-
-
+			<div>
+				<a href="http://coderise.org"><h1>//coderise</h1></a>
 				<div class="social-widgets">
 					<a href="http://coderise.tumblr.com/" class="tb">
 					</a>
@@ -58,133 +28,89 @@
 					<a href="http://www.facebook.com/Coderise" class="fb">
 					</a>
 				</div>
-
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-
 				<div class="clearfix"></div>
-
-
 		</header>
-
 		<div id="content">
-
 			<div class="nav">
-			
-			<div class="wrap">
-
-				<ul>
-					<li><a href="index-es.html">Inicio</a></li>
-					<li ><a href="como.html">Como Funciona</a></li>
-					<li><a href="mentores.html">Mentores</a></li>
-					<li class="active"><a href="acerca.html" >Sobre Coderise</a></li>
-					<li><a href="aplica.html">Aplica</a></li>
-					<li><a href="contribute.html">Apoya</a></li>
-					<li><a href="team.html">Equipo</a></li>
-					<li><a href="press.html">Prensa</a></li>
-				</ul>
-
+				<div class="wrap">
+					<div class="btn-group" style="float: left;padding: 9px 0px;">
+  						<button class="btn btn-mini"><a href="about.html">English</a></button>
+  						<button class="btn btn-mini disabled">Español</button>
+					</div>
+					<ul>
+						<li><a href="index-es.html">Inicio</a></li>
+						<li class="active"><a href="acerca.html">Sobre Coderise</a>
+							<ul>
+								<li><a href="como.html">Como funciona</a></li>
+								<li><a href="mentores.html">Mentores</a></li>
+								<li><a href="team.html">Equipo</a></li>
+								<li><a href="estudiantes.html">Estudiantes</a></li>
+							</ul>
+						</li>
+						<li><a href="http://support.coderise.org/">Apoya</a></li>
+						<li><a href="aplica.html">Aplica</a></li>
+						<li><a href="press.html">Prensa</a>
+							<ul>
+								<li><a href="press.html">Cubrimiento</a></li>
+								<li><a href="press.html">Comunicados</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
-		
-		</div>
-
 			<div id="head">
-
 				<section>
-
-					<div></div>
-
-					<article>
-
-						<h2>Programa.Inspira.Crea.</h2>
-
-						<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web. </h3>
-
-
-					</article>
-
+					<div class="wrap">
+						<article>
+							<h2>Programa.Inspira.Crea.</h2>
+							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Apoya ya!</a>
+						</article>
+					</div>
 				</section>
-
-
 			</div>
-
-
-
 			<div id="wrapper">
-
-				<section>
-
-			<div class="well ">
-            <p>Support our crowdfunding campaign to empower kids in developing nations through code &nbsp;</p>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-				<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Contribute Now!"/>
-			</form>
-
-			<div class="fix"></div>
-
-
-            </div>
-
-        	</section>
-
 				<article class="full-width">
-
-							<img src="images/kids and instructor.png" class="mini-thumb"/><h5>Sobre Coderise</h5>
-							<br/>
+					<h5>Sobre Coderise</h5>
+					<div>
+						<img src="images/kids_and_instructor.png" class="mini-thumb left" style="margin-top:45px"/>
+						<div class="right">
 							<p class="colorGreen">La Misión</p>
-
 							<p>Nuestra misión es empoderar a jóvenes de bajos recursos y gran potencial dándoles las herramientas e inspiración para que puedan ser inovadores de tecnología y futuros emprendedores digitales.</p>
-
-							<br/>
-							<br/>
 							<p class="colorGreen">Objetivos</p>
 							<ul>
-
 								<li>Graduar 15 estudiantes del programa piloto de Coderise</li>
 								<li>Lanzar la primera Hackathon al final del programa</li>
 								<li>Posibilitar que el 70 por ciento de los estudiantes alcance un nivel básico de Javascript</li>
-
 							</ul>
-
-							<p class="colorGreen">Impacto</p>
-
-							<p>Coderise provée conociemientos básicos con los cuales a largo plazo los jóvenes podrían participar en:</p>
-
+						</div>
+					</div>
+					<div class="clearfix"></div>
+					<div>
+						<p class="colorGreen">Impacto</p>
+						<div class="left">
+							<p>Coderise provee conociemientos básicos con los cuales a largo plazo los jóvenes podrían participar en:</p>
 							<ul>
-
 								<li>Aceleradoras de startups tecnológicas</li>
 								<li>Startups y empresas tecnológicas</li>
 								<li>Corporaciones internacionales de tecnología</li>
 								<li>Crear sus propias iniciativas</li>
-
 							</ul>
-
+						</div>
+						<div class="right">
 							<p>A la vez, estas oportunidades resultán en jóvenes:</p>
-
 							<ul>
 								<li>Quienes terminan la secundaria y con más probabilidades de ir a la universidad</li>
-								<li>Contribuir a sus familias</li>
+								<li>Contribuyen a sus familias</li>
 								<li>Conseguir becas y otro respaldo financiero para acceder a educación superior</li>
 							</ul>
-
-							<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
-
-					</article>
-
-				<div class="clearfix"></div>
-
-
-
+						</div>
+					</div>
+					<div class="clearfix"></div>
+					<p class="infobox">Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
+				</article>
+			<div class="clearfix"></div>
 			</div>
-
 		</div>
-
-
-
-
-
-</body>
+	</body>
 </html>
