--- a/how.html
+++ b/how.html
@@ -1,51 +1,24 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-
-		<title>Coderise :: How it Works</title>
-
+	<head>
+		<title>Coderise :: How it works</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
 
-		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
 		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
 		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
-
-
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
-
 		<link rel="icon" type="image/png" href="favicon.png"/>
-
-
 	</head>
-
 	<body>
-
 		<header>
-
-		<div>
-
-
-				<nav>
-
-					<ul>
-
-						<li><a href="como.html" >Espa&ntilde;ol</a></li>
-
-						<li class="slash">/</li>
-
-						<li><a href="#" class="current">English</a></li>
-
-
-					</ul>
-
-				</nav>
-
-
-
+			<div>
+				<div>
+					<a href="http://coderise.org"><h1>//coderise</h1></a>
+				</div>
 				<div class="social-widgets">
 					<a href="http://coderise.tumblr.com/" class="tb">
 					</a>
@@ -54,92 +27,62 @@
 					</a>
 
 					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>
+					</a>	
 				</div>
-
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-
-				<div class="clearfix"></div>
-
-
+			</div>
+			<div class="clearfix"></div>
 		</header>
 
 		<div id="content">
-
 			<div class="nav">
-			
-			<div class="wrap">
-
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="active"><a href="how.html">How It Works</a></li>
-					<li><a href="mentors.html">Mentors</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="apply.html">Apply</a></li>
-					<li><a href="contribute.html">Contribute</a></li>
-					<li><a href="team.html">Our Team</a></li>
-					<li><a href="press.html">Press</a></li>
-				</ul>
-
+				<div class="wrap">
+					<div class="btn-group" style="float: left;padding: 9px 0px;">
+  						<button class="btn btn-mini disabled">English</button>
+  						<button class="btn btn-mini"><a href="como.html">Español</a></button>
+					</div>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li class="active"><a href="about.html">About</a>
+							<ul>
+								<li class="active"><a href="how.html">How It Works</a></li>
+								<li><a href="mentors.html">Mentors</a></li>
+								<li><a href="team.html">Our Team</a></li>
+								<li><a href="students.html">Our Students</a></li>
+							</ul>
+						</li>
+						<li><a href="http://support.coderise.org/">Support</a></li>
+						<li><a href="apply.html">Apply</a></li>
+						<li><a href="press.html">Press</a>
+							<ul>
+								<li><a href="press.html">Coverage</a></li>
+								<li><a href="press.html">Press Releases</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
-		
-		</div>
 
 			<div id="head">
-
 				<section>
-
-					<div></div>
-
-					<article>
-
-						<h2>Code.Inspire.Create.</h2>
-
-						<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-
-
-					</article>
-
+					<div class="wrap">
+						<article>
+							<h2>Code.Inspire.Create.</h2>
+							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
+							<a href="http://support.coderise.org/" class="btn btn-pink">Support now!</a>
+						</article>
+					</div>
 				</section>
-
-
 			</div>
 
-			<!-- <div class="apply-link"><a href="apply.html" alt="Apply to Coderise"> APLICA AHORA </a></div> -->
-
-
 			<div id="wrapper">
-
-			<section>
-
-			<div class="well ">
-            <p>Support our crowdfunding campaign to empower kids in developing nations through code &nbsp;</p>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-				<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Contribute Now!"/>
-			</form>
-
-			<div class="fix"></div>
-
-
-            </div>
-
-        	</section>
-
 				<article class="full-width">
-
-
-							<img src="images/kids and computer.png" class="mini-thumb"/><h5>How it works</h5>
-
+							<h5>How it works</h5>
+							<img src="images/kids_and_computer.png" class="mini-thumb"/>
 							<p class="colorGreen">Length and Structure</p>
 
 							<p>Coderise’s pilot program, offered absolutely free, will begin October 9th, 2012. The first class will be taught by two instructors and will consist of 20 students in the city of Medellín, Colombia. Over the course of 8 weeks the students will learn the principles of Computer Programming and Software Development with a heavy emphasis on creating web applications.   To further develop the students’ learning they will have the opportunity to engage with tech entrepreneurs and engineers from Colombia and from the U.S.</p>
 
 							<p>During the first half of each class, students will learn the concepts necessary to build their very own web application.  The second half of each class will provide students an opportunity to develop a web application of their own throughout the program, simulating real world context.  At the end of the program the class will demo their finalized projects to their peers and instructors.</p>
-
 
 							<p class="colorGreen">Learning Objectives</p>
 
@@ -154,8 +97,6 @@
 								<li>Understand the benefits of Open Source software and how to contribute to it</li>
 								<li>Identify problems in their communities and propose software-aided solutions</li>
 								<li>Create a Minimal Viable Product (MVP)</li>
-
-
 							</ul>
 
 							<p class="colorGreen">Coderise Activities and Events</p>
@@ -169,8 +110,6 @@
 							<p class="colorGreen">Mentors of Coderise</p>
 
 							<p>Each Saturday, after regular class from 8:00 AM to 11:00 AM, there will be informal talks with various Coderise mentors, successful professionals from the tech world.  These will share their experiences, their trajectory throughout various initiatives, and will be able to talk one-on-one with Coderise students.  <a href="mentors.html">[Read a bit more on mentors here.]</a></p>
-
-							
 
 							<br/>
 							<br/>
@@ -192,19 +131,8 @@
 
 							<p>Saturday: 8:00 AM – 1:00 PM</p>
 						</article>
-
-
-
 				<div class="clearfix"></div>
-
-
 			</div>
-
 		</div>
-
-
-
-
-
-</body>
+	</body>
 </html>
